# retro-control-server

./: .gitignore  Cargo.toml  README.md
src/: devices.rs  discovery.rs  gamepad_device.rs  gamepad_server.rs  input_mode.rs  keyboard_server.rs  logger.rs  main.rs  mouse_server.rs  protocol.rs
src/devices/: gamepad.rs  mod.rs  xbox360.rs  xbox360_layout.rs
src/servers/: gamepad_server.rs  keyboard_server.rs  mod.rs  mouse_server.rs
